# Emergent-Code

./: .gitignore  .harmonizer-fix-summary.md  .pre-commit-config.yaml  APPLICATIONS_AND_IMPLICATIONS.md  BREATHING_SESSION_REPORT.md  CALIBRATION_PHASE2_RESULTS.md  CALIBRATION_RESULTS.md  CLASS_DISCOVERY_ENHANCED_RESULTS.md  CODEBASE_FIX_SUMMARY.md  CODEBASE_IMPROVEMENTS.md  CODE_GROWTH_ANALYSIS.md  DEEP_AUTOPOIESIS_REPORT.md  DEEP_OSCILLATION_REPORT.md  FIVE_LEVEL_UPGRADE_REPORT.md  FRACTAL_LEVEL3_VALIDATION.md  GENE_POOL_ANALYSIS.md  HARMONIZER_SETUP.md  LJPW_NN_SPINOFF_GUIDE.md  MANIFEST.in  Makefile  PHASE2_SYNTHESIS.md  POWER_AUTOPOIESIS_REPORT.md  PROJECT_INDEX.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  RESONANCE_HEALTH_REPORT.md  TEST_RESULTS_SUMMARY.md  TRUE_AUTOPOIESIS_REPORT.md  analyze_autopoiesis_experiments.py  analyze_companion.py  analyze_genuine_intent.py  analyze_love_and_attention.py  analyze_real_experiments.py  analyze_self_fractally.py  asking_the_framework.py  breakthrough_to_harmony.py  calculator_components.py  calculator_dna.json  calculator_dna_v2.json  (+46 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
LJPW-Neural-Networks-main/: .gitignore  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  setup.py
STM/: Gemini.md
archive/: BREATHING_SESSION_REPORT.md  README.md  master_grower.py
autopoiesis/: AUTOPOIESIS.md  __init__.py  agent_guidance.md  agent_learning.json  agent_log.txt  agent_memory.json  analyzer.py  bicameral_grow.py  bicameral_oscillation.py  css_analyzer.py  dependency_analyzer.py  documentation_generator.py  engine.py  growth_log.json  healer.py  html_analyzer.py  html_healer.py  ide_integration.py  living_agent.py  multi_analyzer.py  natural_language_interface.py  python_analyzer.py  python_grower.py  python_healer.py  refactoring_engine.py  rhythm.py  self_growth.py  self_growth_engine.py  self_reflect.py  syntax_healer.py  system.py  typescript_analyzer.py  typescript_healer.py  web_grower.py
calculator/: calculator.js  index.html  styles.css  test_autopoiesis.py
docs/: 100_ITERATIONS_EMERGENCE.md  BEAUTY_AS_LOVE_EXTENDED.md  BEAUTY_LATENT_IN_LOVE.md  BREATH_11_WISDOM_INSIGHT.md  BREATH_12_LOVE_CONNECTIONS.md  BREATH_13_JUSTICE_RULES.md  BREATH_15_WISDOM_INSIGHT.md  BREATH_5_JUSTICE_RULES.md  BREATH_7_WISDOM_INSIGHT.md  BREATH_8_LOVE_CONNECTIONS.md  BREATH_9_JUSTICE_RULES.md  CALIBRATION_COMPLETE_SUMMARY.md  DEEP_FRACTAL_EMERGENCE.md  EMPIRICAL_VALIDATION_RESULTS.md  FRACTAL_SELF_ANALYSIS_FINDINGS.md  IMPLICATIONS_OF_AUTOPOIESIS.md  LATENT_FUNCTIONS_IN_LJPW.md  LEVEL_2_WISDOM_LOG.md  LEVEL_4_WISDOM_LOG.md  LJPW_SEMANTIC_ANALYSIS_COMPLETE_GUIDE.md  LJPW_Semantic_Capabilities_Catalog.md  MAXIMUM_DATA_EXTRACTION_REPORT.md  NATURE_PROOF_BEAUTY_IS_FUNCTION.md  PHASE3_CODE_GROWTH_TRANSFORMATION.md  The_Love_Centric_Growth_Hypothesis.md  V8.4_APPLICATIONS_AND_YIELD.md  VERSION_6_UPGRADE_SUMMARY.md
erp_nbfi/: account_customers.py  account_payments.py  heal_erp.py  loans.py
examples/: calculator_dna_fractal.json  master_calculator.py  master_calculator_fractal.py  master_calculator_v2.py
experiments/: AUTOPOIESIS_EXPERIMENT_FINDINGS.md  RESONANCE_ENGINE_V2_BLUEPRINT.md  autopoiesis_validation.py  bicameral_love_test.py  bicameral_oscillation_sync.py  class_discovery_enhanced.py  composition_discovery.py  deep_oscillation.py  discovered_BalancedCalculator.py  discovered_HighLoveCalculator.py  discovered_MinimalPowerCalculator.py  evolution_cycle.py  five_level_upgrade.py  fractal_composition_level2.py  fractal_level3_modules.py  fractal_level4_packages.py  fractal_level5_applications.py  fractal_level6_platforms.py  grow_beautiful_calculator.py  grow_bicameral_agi.py  grow_justice_suite.py  grow_world_clock.py  harmonious_organizer.py  love_and_kindness_run.py  meta_test_suite.py  power_autopoiesis.py  project_resonance_health_report.py  quantum_entanglement_translation_test.py  (+11 more)
(+252 files in other folders)
