# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-code"
version = "0.4.0"
description = "Revolutionary code generation using LJPW Framework and fractal composition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Emergent Code Team"}
]
keywords = ["code-generation", "ljpw", "fractal", "composition", "semantic-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.7.0,<24.0.0",
    "ruff>=0.0.285,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-PyYAML>=6.0.12",
]
docs = [
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]

[project.scripts]
emergent-grow = "master_grower:main"
emergent-test = "run_all_tests:main"
emergent-validate = "validate_fractal_proof:main"

[project.urls]
Homepage = "https://github.com/yourusername/emergent-code"
Documentation = "https://github.com/yourusername/emergent-code/docs"
Repository = "https://github.com/yourusername/emergent-code"
"Bug Tracker" = "https://github.com/yourusername/emergent-code/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | generated
  | Python-Code-Harmonizer
  | Python-Code-Harmonizer-main
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "generated",
    "Python-Code-Harmonizer",
    "Python-Code-Harmonizer-main",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (intentional for path modifications)
    "E741",  # ambiguous variable name (l, j, p, w are standard in LJPW framework)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "N806",  # variable name should be lowercase (L, J, P, W are standard in LJPW framework)
    "F841",  # local variable assigned but never used
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "generated/",
    "Python-Code-Harmonizer",
    "Python-Code-Harmonizer-main",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "generated/*",
    "Python-Code-Harmonizer*/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
